# buffett-stock-analyzer

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_LAYERS.md  CLAUDE.md  MONITORING_GUIDE.md  MONITORING_IMPLEMENTATION_PLAN.md  OPTIMIZATION_ARCHITECTURE_DESIGN.md  README.md  cache_demo.py  demo_api_optimization.py  demo_optimization_benefits.py  example_usage.py  main.py  pyproject.toml  sample_stocks.txt  target_stocks.conf  test_ak_share.py  test_cache.py
.claude/skills/akshare/: SKILL.md  historical_data.md  individual_stock.md  market_overview.md
.kilocode/rules/: buffett-investment-system.md
data/cache/dividends/: 000001.SH.pkl  000001.SZ.pkl  000002.SH.pkl  000002.SZ.pkl  000004.SH.pkl  000006.SH.pkl  000007.SH.pkl  000008.SH.pkl  000009.SH.pkl  000010.SH.pkl  000011.SH.pkl  000012.SH.pkl  000014.SH.pkl  000016.SH.pkl  000017.SH.pkl  000019.SH.pkl  000020.SH.pkl  000021.SH.pkl  000025.SH.pkl  000026.SH.pkl  000027.SH.pkl  000028.SH.pkl  000029.SH.pkl  000030.SH.pkl  000031.SH.pkl  000032.SH.pkl  000034.SH.pkl  000035.SH.pkl  000036.SH.pkl  000037.SH.pkl  000039.SH.pkl  000042.SH.pkl  000045.SH.pkl  000048.SH.pkl  000049.SH.pkl  000050.SH.pkl  000055.SH.pkl  000056.SH.pkl  000058.SH.pkl  000059.SH.pkl  (+5382 more)
data/cache/market/: overview.pkl
data/cache/stocks/: 000001.SH.json  000001.SZ.json  000002.SH.json  000004.SH.json  000006.SH.json  000007.SH.json  000069.SH.json  000596.SH.json  000858.SH.json  600011.SH.json  600028.SH.json  600036.SH.json  600519.SH.json  600886.SH.json  600900.SH.json  601166.SH.json  601318.SH.json  601336.SH.json  601601.SH.json  601857.SH.json
data/market_environment/: environment_20251122.json
data/risk_management/: risk_alerts_20251122.json
docs/: MARKET_ENVIRONMENT.md  MULTI_FACTOR_SCORING.md  RISK_MANAGEMENT.md
examples/: integrated_risk_monitoring_example.py  integration_test_example.py  market_environment_example.py  multi_factor_example.py  risk_management_example.py  technical_analysis_example.py  technical_analysis_pure_example.py  technical_analysis_standalone_example.py
src/buffett/: __init__.py  main.py
src/buffett/api/: __init__.py  endpoints.py  monitor.py
src/buffett/config/: __init__.py  industry.py  settings.py  target_stocks.py
src/buffett/core/: __init__.py  adaptive_scoring.py  config.py  container.py  market_environment.py  monitor.py  multi_factor_scoring.py  risk.py  risk_management.py  scoring.py  screening.py
src/buffett/core/screening/: __init__.py  eligibility_screener.py  risk_manager.py  screening_service.py  trend_analyzer.py  valuation_analyzer.py
src/buffett/data/: __init__.py  cache.py  fetcher.py  providers.py  repositories.py  repository.py
src/buffett/data/repositories/: __init__.py  cache_repository.py  dividend_repository.py  price_repository.py  stock_repository.py
src/buffett/exceptions/: __init__.py  base.py  config.py  data.py  screening.py
src/buffett/factories/: __init__.py  repository_factory.py  strategy_factory.py
src/buffett/interfaces/: __init__.py  providers.py  repositories.py  services.py
src/buffett/models/: __init__.py  industry.py  monitoring.py  screening.py  stock.py
src/buffett/strategies/: __init__.py  analysis.py  backtesting.py  data_fetch_strategies.py  enhanced_technical_factor.py  optimized_data_fetch.py  screening.py  signals.py  technical_analysis.py  technical_visualization.py
src/buffett/utils/: __init__.py  file_loader.py  logger.py  reporter.py  scheduler.py
tests/: __init__.py  conftest.py
tests/integration/: run_integration_tests.py  run_simple_integration_tests.py  test_end_to_end_workflow.py  test_framework.py  test_market_environment_integration.py  test_multi_factor_integration.py  test_performance_compatibility.py  test_risk_management_integration.py  test_technical_analysis_integration.py
tests/unit/: test_adaptive_scoring.py  test_backtesting.py  test_caching.py  test_compatibility.py  test_container.py  test_design_patterns.py  test_enhanced_technical_factor.py  test_market_environment.py  test_models.py  test_multi_factor_config.py  test_multi_factor_scoring.py  test_repositories.py  test_risk_management.py  test_technical_analysis.py  test_technical_analysis_isolated.py  test_technical_analysis_standalone.py  test_technical_visualization.py
