[project]
name = "buffett-dividend-screener"
version = "2.1.0"
description = "Professional Buffett dividend stock screening system with layered architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Buffett Strategy Team"}
]
keywords = ["stock", "investment", "dividend", "a-share", "akshare", "screening"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "akshare>=1.13.0",
    "numpy>=2.0.2",
    "pandas>=2.0.0",
    "psutil>=7.1.3",
    "requests>=2.31.0",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
buffett = "main:main"
buffett-screen = "main:main screen"
buffett-target = "main:main target"

[project.urls]
Homepage = "https://github.com/your-username/buffett"
Repository = "https://github.com/your-username/buffett"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
